<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GrabarActivity"
    android:id="@+id/LinearLayout1"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Grab"
        android:gravity="center"
        android:id="@+id/txtG" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/estado"
        android:id="@+id/statusGtxt"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/grab" />
    </RelativeLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/opcGrab1"
        android:id="@+id/button1"
        android:layout_gravity="center_horizontal"
        android:onClick="record"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/opcGrab2"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:onClick="stopRecording"/>

</LinearLayout>
