<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/LinearLayout1"
    android:orientation="vertical"
    android:weightSum="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Rep"
        android:gravity="center"
        android:id="@+id/txtR" />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/rep" />
    </RelativeLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/opcGrab3"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:onClick="play" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:text="@string/opcGrab4"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:onClick="stopPlaying"/>


</LinearLayout>
